# paNET_Extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: results.json
docs/: README.md  diagram_component.drawio  technic_extraction.drawio
src/: __init__.py  main.py  results.json
src/levenshtein/: __init__.py  levenshtein_distance.py
src/llm/: __init__.py  llm.py
src/matchmapper/: __init__.py  matchmapper.py
src/ontology/: __init__.py  ontology_import.py
src/openaire/: __init__.py  openaireapi.py
src/orchestrator/: __init__.py  orchestrator.py
src/panetextractor/: __init__.py
src/panetextractor/api/: main.py
src/panetextractor/orchestrator/: orchestrator.py
src/scorerapidfuzz/: __init__.py  score.py
src/service_evaluation/: ___init__.py  service_evaluation.py
tests/: matcher_test.py
tests/data/: results.json
tests/openairetest/: openaire_test.py
tests/test_api/: api2_test.py  api_test.py
tests/test_llm/: llm_test.py
tests/test_ontology_import/: ontology_import_test.py
tests/test_openaire/: data_provider_test.py  openaire_test.py
tests/test_orchestrator/: orchestrator_test.py  orechestrator_test.py
