[project]
name = "PaNETExtractor"
version = "0.1.0"
requires-python = ">=3.10"
description = "Extract paNET terms from text"
readme = "README.md" 
dependencies =  [
    "fastapi[standard]>=0.115.13",
    "httpx>=0.28.1",
    "owlready2>=0.48",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "rapidfuzz>=3.13.0",
    "ruff>=0.12.1",
    "transformers[torch]>=4.52.4",
    "accelerate>=1.8.1",
]
