[project]
name = "PaNETExtractor"
version = "0.1.0"
requires-python = ">=3.10"
description = "Extract paNET terms from text"
readme = "README.md" 


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.5",
]
app =  [
    "fastapi[standard]>=0.115.13",
    "httpx>=0.28.1",
    "owlready2>=0.48",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
    "transformers[torch]>=4.52.4",
    "accelerate>=1.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"